--- a/conf/app.ini
+++ b/conf/app.ini
@@ -35,9 +35,9 @@ Default.TablePrefix = go_
 
 [yqw]
 Type = mysql
-User = yqw
-Password = qjcod!GvH49IrEESoiwy
-Host = 118.31.64.93:3307
+User = www
+Password = 123456
+Host = 127.0.0.1:3306
 Name = yd_wb_tmp
 TablePrefix = yi_
 
