--- a/conf/app.ini
+++ b/conf/app.ini
@@ -26,12 +26,12 @@ ReadTimeout = 60
 WriteTimeout = 60
 
 [database]
-Default.Type = mysql
-Default.User = www
-Default.Password = 123456
-Default.Host = 127.0.0.1:3306
-Default.Name = go
-Default.TablePrefix = go_
+Type = mysql
+User = www
+Password = 123456
+Host = 127.0.0.1:3306
+Name = go
+TablePrefix = go_
 
 [yqw]
 Type = mysql
