--- a/conf/app.ini
+++ b/conf/app.ini
@@ -31,14 +31,16 @@ User = www
 Password = 123456
 Host = 127.0.0.1:3306
 Name = go
+DbName = go
 TablePrefix = go_
 
-[yqw]
+[yd]
 Type = mysql
-User = www
+User = yqw
 Password = 123456
-Host = 127.0.0.1:3306
-Name = yd_wb_tmp
+Host = 118.31.64.93:3307
+Name = yd
+DbName = yd_wb_tmp
 TablePrefix = yi_
 
 [redis]
