--- a/conf/app.ini
+++ b/conf/app.ini
@@ -36,12 +36,12 @@ TablePrefix = go_
 
 [yd]
 Type = mysql
-User = yqw
+User = www
 Password = 123456
-Host = 118.31.64.93:3307
-Name = yd
-DbName = yd_wb_tmp
-TablePrefix = yi_
+Host = 127.0.0.1:3306
+Name = go
+DbName = go
+TablePrefix = go_
 
 [redis]
 Host = 127.0.0.1:6379
